# pyCalc

./: .gitignore  LICENSE  README.md  pyproject.toml
pyCalc/: calculations.py  gui.py  main.py  settings.py
