[tool.poetry]
name = "pyCalc"
version = "0.1.0"
description = "A GUI Calculator using Tkinter"
authors = ["Aswa Paul <aswapaul@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.4"
screeninfo = "^0.6.7"
python-decouple = "^3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
